# sqlx_example

./: .env  Cargo.toml  README.md
migrations/: 20250116100136_user.sql
src/: main.rs
