[package]
name = "sqlx_example"
description = "An example on how to set up SQLX/Postgres in Iced"
authors = ["Alexander Kleidinc <kleydints@petalmail.com"]
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["advanced", "tokio", "debug"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "time", "uuid", "rust_decimal", "macros"] }
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.0", features = ["v4", "fast-rng"] }
